# algorithms_for_optimzation

./: .gitignore  CMakeLists.txt  README.md
chap10_constraints/examples/: example1.cpp
chap3_bracketing/: bracketing.h
chap4_local_descent/examples/: example1.cpp
chap5_first_order_methods/: adadelta.h  adagrad.h  adam.h  gradient_descent.h  hypergradient.h  momentum_method.h  nesterov_momentum.h
chap6_second_order_methods/: newtons_method.h
common/: adadelta.h  adagrad.h  adam.h  augmented_lagrangian_method.h  backtracking_line_search.h  concrete_function.h  conjugate_gradient.h  constrained_optimization_method_interface.h  constrained_optimizer.h  function_interface.h  gradient_descent.h  interior_point_method.h  line_search_interface.h  optimization_method_interface.h  optimizer.h  optimizer_interface.h  penalty_method.h  rmsprop.h  unconstrained_optimizer.h
config/: config.yaml
kalman_filter/: data_loader.hpp  data_type.hpp  ekf03.hpp  ekf03_test.cpp  ekf03c.hpp  ekf03c_test.cpp  ekf03u.hpp  ekf03u_test.cpp  gpt_ekf.h  math.hpp
manifold/: acceleration_control_input.h  adam.h  angular_velocity_control_input.h  augmented_lagrangian_method.h  backtracking_line_search.h  concrete_function.h  conjugate_gradient.h  constrained_optimization_method_interface.h  constrained_optimizer.h  control_input_base.h  control_input_group.h  exteneded_conrete_function.h  function_interface.h  gauss_newton_method.h  gradient_descent.h  kalman_filter_base.h  line_search_interface.h  measurement_base.h  measurement_group.h  momentum_method.h  newton_method.h  optimization_method_interface.h  optimizer_interface.h  penalty_method.h  rotation_measurement.h  rotation_state_component.h  state.h  state_component_base.h  unconstrained_optimizer.h  vector_measurement.h  vector_state_component.h
manifold_test/: constrained_problem_test.cpp  state_test.cpp
(+6 files in other folders)
